# michelangelo-thumbnails

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SKILL.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
commands/: michelangelo.md
examples/: README.md  basic.sh  product_announcement.sh
src/michelangelo_thumbnails/: __init__.py  cli.py  config.py  generator.py
src/michelangelo_thumbnails/assets/fonts/Herokid/: LICENSE.txt
src/michelangelo_thumbnails/pipeline/: background.py  circles.py  io.py  logo.py  segmentation.py  text.py
tests/: test_background.py  test_circles.py  test_cli.py  test_config.py  test_generate.py  test_io.py  test_logo.py  test_segmentation.py  test_text.py
tests/integration/: test_rembg.py
